Link to Registration Page

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <button
             class="border border-white rounded px-4 py-2 text-lg text-white"
           >
-            <a href="">Registor</a>
+            <a href="./OtherPages/Register.html">Registor</a>
           </button>
           <button class="bg-white px-4 py-3 rounded-full font hidden "><i class="ri-file-list-3-fill"></i></button>
         </div>
