Update in home index.html file

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
         <div class="bg-[#fdad00] w-[30%] p-3 text-center rounded-lg">
           <button class="font-bold text-white text-xl font-[red_rose]">
-            Lern more
+            Learn more
           </button>
         </div>
       </div>
