2st update in Index.html

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
             <div class="flex items-center gap-6 p-3">
                 
                 <!-- Left Button -->
-                <button id="leftBtn" class="px-6 py-5 text-3xl">
+                <button id="leftBtn" class="px-6 py-5 text-3xl text-green-700">
                 <i class="ri-arrow-left-wide-line font-black text"></i>
                 </button>
 
