Update in webpages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Swift Bites</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet"/>
     <!-- fonts -->
@@ -58,7 +58,7 @@
               />
             </defs>
           </svg>
-          <p class="text-white text-lg">Food Delivery</p>
+          <p class="text-white text-lg">Swift Bites</p>
         </div>
         <div>
           <ol class="flex gap-10 text-white text-lg">
@@ -611,7 +611,7 @@
               </defs>
             </svg>
             <p class="text-white text-xl font-bold font-[red_rose]">
-              Food Delivery
+              Swift Bites
             </p>
           </div>
           <div>
