Transition in cards

--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
       class="w-[88%] overflow-hidden p-3 bg-white absolute top-30 right-[6%] rounded-3xl px-10 py-4 flex justify-between z-0"
     >
       <div class="w-50% flex flex-col gap-6">
-        <div>
+        <div class="">
           <p
-            class="text-[70px] font-semibold -tracking-[3px] font-['red_rose'] text-zinc-700"
+            class="text-[70px] font-semibold -tracking-[3px] font-['red_rose'] text-zinc-700 "
           >
             We deliver you food
           </p>
           <p
-            class="text-[70px] font-semibold -tracking-[3px] font-['red_rose'] text-zinc-700"
+            class="text-[70px] font-semibold -tracking-[3px] font-['red_rose'] text-zinc-700 "
           >
             all over the city within
           </p>
@@ -274,7 +274,7 @@
         </div>
         <!-- cards -->
         <div class="flex flex-wrap gap-20">
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-1.png" alt="" class="w-full h-full" />
             </div>
@@ -293,7 +293,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[85%] flex mx-auto">
               <img src="Pictures/Product-2.png" alt="" class="w-full h-full" />
             </div>
@@ -312,7 +312,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-3.png" alt="" class="w-full h-full" />
             </div>
@@ -331,7 +331,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-3.png" alt="" class="w-full h-full" />
             </div>
@@ -353,7 +353,7 @@
           
           
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-5.png" alt="" class="w-full h-full" />
             </div>
@@ -372,7 +372,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-6.png" alt="" class="w-full h-full" />
             </div>
@@ -391,7 +391,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-7.png" alt="" class="w-full h-full" />
             </div>
@@ -410,7 +410,7 @@
             </div>
           </div>
 
-          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer">
+          <div class="w-[20%] bg-white flex flex-col rounded-2xl p-3 hover:bg-[#fdad00] hover:text-white group transition-all duration-600 cursor-pointer hover:-translate-y-3">
             <div class="w-[84%] flex mx-auto">
               <img src="Pictures/Product-7.png" alt="" class="w-full h-full" />
             </div>
